# Http_Server_cpp

./: .clang-format  .dockerignore  .env  .gitignore  CMakeLists.txt  Conanfile.py  Dockerfile  Makefile  README.md  compose.yaml  conanfile.py
frontend/client/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/client/public/: index.html
frontend/client/src/: App.js
frontend/client/src/components/: Dashboard.jsx
frontend/client/src/components/regLogin/: LandingPage.jsx  Landing_page.jsx  RegisterLogin.jsx
frontend/client/src/context/: UserContext.jsx
frontend/client/src/styles/: global.css  landingPage.css  regLogin.css
include/: DB_controller.h  Interfaces.h  RequestHandler.h  ResponseService.h  SQLiteDB.h  Server.h  ThreadPool.h  config.h  request_handler.h  router.h  server.h  sqlite_db.h
include/request_handlers/: AuthHandler.h  BaseHandler.h  ImageHandler.h  UserHandler.h
include/utils/: JsonResponse.h  Logger.h  URL_encoded_parsing.h  error_handling_template.h  http_data.h  http_data_types.h  json_parsing.h  json_response.h  misc.h  result_types.h  urlEncoded_parsing.h
src/: DB_controller.cpp  RequestHandler.cpp  ResponseService.cpp  SQLiteDB.cpp  Server.cpp  ThreadPool.cpp  main.cpp  request_handler.cpp  router.cpp  server.cpp  sqlite_db.cpp
src/request_handlers/: AuthHandler.cpp  ImageHandler.cpp  UserHandler.cpp
src/utils/: JsonResponse.cpp  Logger.cpp  json_response.cpp
tests/: mocks.h  test_ThreadPool.cpp
tests/request_handlers/: test_AuthHandler.cpp  test_UserHandler.cpp
tests/utils/: test_JsonResponse.cpp  test_URL_encoded_parsing.cpp
